Change list style in projects and adjust some responsive properties

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -103,12 +103,12 @@ $black: rgb(0, 0, 0);
   color: $black;
 }
 
-ul{
-  li{
-  list-style: circle;
-  list-style-position: inside;
-  }
-  p{
-    margin-left: 32px;
-  }
-}
+// ul{
+//   li{
+//   list-style: circle;
+//   list-style-position: inside;
+//   }
+//   p{
+//     margin-left: 32px;
+//   }
+// }
