--- a/src/app/management/circles/circles.component.scss
+++ b/src/app/management/circles/circles.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 100%;
+  /* min-height: 100%; */
   align-items: center;
   justify-content: center;
   align-content: center;
@@ -17,6 +17,16 @@
 
   &:last-child {
     padding-top: 0;
+  }
+
+  @include sm {
+    &:first-child {
+      padding: 2rem 0;
+    }
+
+    &:last-child {
+      padding: 2rem 0;
+    }
   }
 
 }
