--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -3,16 +3,40 @@
 
 .projects {
   .project {
+    margin-bottom: 2rem;
     @include sm {
       padding: 0 1rem;
     }
-    margin-bottom: 2rem;
 
     .project-title {
       display: inline-block;
       font-size: 1.5rem;
       margin-bottom: 1rem;
       padding: 0.5rem 1rem;
+    }
+
+    ul {
+      li {
+        list-style: none;
+        color: $black;
+        font-size: 0.8rem;
+        @include sm {
+          font-size: 1rem;
+        }
+
+        p {
+          color: $gray;
+          font-size: 0.9rem;
+          margin-top: 2px;
+          text-indent: 10px;
+        }
+
+        &:before {
+          color: $gray;
+          content: "➤";
+          margin-right: 5px;
+        }
+      }
     }
   }
 }
