--- a/src/app/management/circles/circles.component.html
+++ b/src/app/management/circles/circles.component.html
@@ -1,5 +1,5 @@
 <div class="row bg-purple">
-  <div class="container col-xs-12 col-sm-6">
+  <div class="container col-xs-12 col-md-6">
     <div class="circle bg-pink">
       <div class="circle-content">
         <p class="number">302</p>
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <div class="container col-xs-12 col-sm-6">
+  <div class="container col-xs-12 col-md-6">
     <div class="circle bg-light-blue">
       <div class="circle-content">
         <p class="number">19</p>
