--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -4,10 +4,10 @@
   </div>
   <div class="col-xs-12">
     <div class="row management">
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-lg-4">
         <ga-circles></ga-circles>
       </div>
-      <div class="col-xs-12 col-md-8">
+      <div class="col-xs-12 col-lg-8">
         <ga-grid></ga-grid>
       </div>
     </div>
