--- a/src/app/header/award/award.component.html
+++ b/src/app/header/award/award.component.html
@@ -1,4 +1,4 @@
-<section class="subheader row">
+<section class="subheader bg-light-blue row middle-xs">
   <div class="subheader-title col-xs-12 col-sm-6 col-md-4">
     <div class="row middle-xs">
       <div class="col-xs-12">
