--- a/src/app/header/award/award.component.scss
+++ b/src/app/header/award/award.component.scss
@@ -6,6 +6,7 @@
     background-color: $light-blue;
     color: $white;
     padding: 1rem 0.5rem;
+    height: 100%;
 
     h2 {
       color: $light-gray;
