--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -9,7 +9,7 @@
       h1 {
         color: $pink;
         font-size: 2rem;
-        @include sm {
+        @include md {
           font-size: 4rem;
         }
       }
@@ -27,7 +27,7 @@
           font-weight: bold;
           text-align: center;
           padding: 1rem 0;
-          @include sm {
+          @include md {
             font-size: 2rem;
             padding: 0;
           }
