--- a/src/app/management/circles/circles.component.scss
+++ b/src/app/management/circles/circles.component.scss
@@ -19,7 +19,7 @@
     padding-top: 0;
   }
 
-  @include md {
+  @include sm {
     &:first-child {
       padding: 2rem 0;
     }
@@ -33,26 +33,41 @@
 .circle{
   display: flex;
   border-radius: 50%;
-  width: 200px;
-  height: 200px;
+  width: 180px;
+  height: 180px;
   align-items: center;
   align-content: center;
   justify-content: center;
   margin: 10px 0px;
 
+  @include lg {
+    width: 200px;
+    height: 200px;
+  }
+
   .circle-content{
     text-align: center;
     padding: 0 1rem;
+    width: 100%;
+    padding-left: 2rem;
     /* padding-top: 75px; */
     p{
      color: $white;
-     font-size: 1rem;
+     font-size: 0.8rem;
      text-align: left;
-     line-height: 1;
+     line-height: 1.3;
+
+     @include lg {
+       font-size: 1rem;
+     }
     }
     .number{
       font-weight: bold;
-      font-size: 2rem;
+      font-size: 1.5rem;
+      margin-bottom: 0.5rem;
+      @include lg {
+        font-size: 2rem;
+      }
     }
   }
 
