--- a/src/app/statistics/statistics.component.scss
+++ b/src/app/statistics/statistics.component.scss
@@ -29,7 +29,7 @@
     }
 
     .name {
-      font-size: 1rem;
+      font-size: 0.8rem;
       margin-bottom: 1rem;
       @include md {
         font-size: 1.5rem;
@@ -40,6 +40,9 @@
       font-size: 0.9rem;
       margin: 0;
       @include md {
+        font-size: 1.2rem;
+      }
+      @include lg {
         font-size: 1.5rem;
       }
     }
