--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,37 @@
-<p>
-  contact works!
-</p>
+<div class="contact row bg-dark-gray white middle-xs">
+  <div class="contact-info col-xs-12 col-md-6">
+    <div class="row center-xs middle-xs">
+
+        <div class="contact-item row middle-xs center-xs col-xs-12 col-sm-6">
+          <div class="contact-icon">
+            <img alt="Gustavo Arenas Facebook" src="/assets/icons/facebook.svg"/>
+          </div>
+          <div class="contact-link">
+            <a href="https://www.facebook.com/gtvoarenas/">/Gustavo Arenas</a>
+          </div>
+        </div>
+
+        <div class="contact-item row middle-xs center-xs col-xs-12 col-sm-6">
+          <div class="contact-icon">
+            <img alt="" src="/assets/icons/twitter.svg"/>
+          </div>
+          <div class="contact-link">
+            <a href="https://twitter.com/arenasgustavo?lang=en">@gustavo_arenas</a>
+          </div>
+        </div>
+
+    </div>
+  </div>
+
+  <div class="contact-button row col-xs-12 col-md-6 bg-pink">
+    <div class="arrow-container flex-1 row middle-xs center-xs bg-purple">
+      <span class="arrow">➣</span>
+    </div>
+    <div class="link-container flex-10 bg-light-purple">
+      <a class="text-upper text-bold full-width full-height flex-2"
+          href="http://www.gustavoarenas.com.ar/">
+        gustavoarenas.com.ar
+      </a>
+    </div>
+  </div>
+</div>
